DELIA-26572 : Adding CableLabs Mibs url to MIRROR.
Reason for change: Updated conf file with CABLELABSMIBS_MIRROR to fetch mibs from the url.
Test Procedure: Verify the mibs are copie from http://mibs.cablelabs.com/MIBs/ .
Risk: Low
Signed-off-by: nhanasi <Naveenkumar_Hanasi@comcast.com>

cherry-picked from upstream commit 2b915683309a4065df8700992918c09456a79ac3

Change-Id: I27f830f26c6eaf2a0899e92e0f0da366d21913b8

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -599,6 +599,7 @@ XORG_MIRROR = "http://xorg.freedesktop.org/releases"
 SAVANNAH_GNU_MIRROR = "http://download.savannah.gnu.org/releases"
 SAVANNAH_NONGNU_MIRROR = "http://download.savannah.nongnu.org/releases"
 CPAN_MIRROR = "http://search.cpan.org/CPAN"
+CABLELABSMIBS_MIRROR = "http://mibs.cablelabs.com/MIBs"
 
 SRC_URI[vardepsexclude] += "\
     APACHE_MIRROR \
@@ -616,6 +617,7 @@ SRC_URI[vardepsexclude] += "\
     SOURCEFORGE_MIRROR \
     XLIBS_MIRROR \
     XORG_MIRROR \
+    CABLELABSMIBS_MIRROR \
 "
 
 # You can use the mirror of your country to get faster downloads by putting
